--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "venv/bin/python3",
+  "python.pythonPath": "venv/bin/python",
   "python.formatting.provider": "autopep8",
   "python.linting.pylintEnabled": false,
   "python.linting.pep8Enabled": true,
